--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -23,7 +23,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd /home/SduChatBotFront
+            cd /home/ubuntu/SduChatBotFront
             git pull origin damir
             docker compose down
             docker compose up -d --build
