--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VITE_API_URL=http://10.36.40.79:8080/api
-VITE_API_URL=http://3.76.40.230:8080/api
+# VITE_API_URL=http://3.76.40.230:8080/api
+VITE_API_URL=http://18.193.223.230:8080/api
 # VITE_API_URL = https://f522ef6b153a.ngrok-free.app/api
