--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -27,5 +27,5 @@ jobs:
             git fetch origin damir
             git reset --hard origin/damir
             git clean -fd
-            docker compose build sdu-chat-front-prod
-            docker compose up -d sdu-chat-front-prod
+            docker compose build sdu-chat-bot-front
+            docker compose up -d sdu-chat-bot-front
