--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,9 @@
 services:
   sdu-chat-front:
-    image: batyrbaev0520/sdu-chat-bot-front:local-1.0.0
+    image: batyrbaev0520/sdu-chat-front:prod-1.0.0
     ports:
       - "5173:5173"
     environment:
       - NODE_ENV=development
-      - VITE_API_URL=${VITE_API_URL}
-    restart: unless-stopped 
-
-  sdu-chat-front-prod:
-    image: batyrbaev0520/sdu-chat-bot-front:prod-1.0.0
-    environment:
-      - VITE_API_URL=${VITE_API_URL}
-    ports:
-      - "80:80"
+      - VITE_API_URL=https://chat-back.sdu.edu.kz/api
     restart: unless-stopped 
