init: prod infra

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,8 @@
 services:
   sdu-chat-front:
-    build:
-      context: .
-      dockerfile: Dockerfile
     ports:
       - "5173:5173"
-    volumes:
-      - .:/app
-      - /app/node_modules
     environment:
       - NODE_ENV=development
-      - VITE_API_URL=http://3.79.94.254:8080/api
-    restart: unless-stopped 
-  sdu-chat-front-prod:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-      args:
-        VITE_API_URL: "http://3.79.94.254:8080/api"
-    ports:
-      - "80:80"
-    restart: unless-stopped 
+      - VITE_API_URL=https://chat-back.sdu.edu.kz/api
+    restart: unless-stopped
